css/admin_coursepress_page_course_details.css
/* ... */
.course-section .course-form div.wide .date-range div.date {
    position: relative;
}

.course-section .course-form div.wide .date-range div.date:after {
    font: normal normal 17px/17px dashicons;
    font-weight: normal;
    content: "\f145";
    position: absolute;
    top: 6px;
    right: 4px;
    z-index: 9999;
    color: #c9c9c9;
}

.course-section .course-form div.wide .date-range .start-date.disabled div.date:after,
.course-section .course-form div.wide .date-range .end-date.disabled div.date:after {
    color: #dddddd;
}

.course-section .course-form div.narrow .course-sku input[type="text"] {
    width: 160px;
    margin-left: 25px;
}


.course-section .course-form div.narrow .course-price {
    margin: 20px 0 10px 0;
}
.course-section .course-form div.narrow .course-sale-price,
.course-section .course-form div.narrow .course-enable-gateways {
    margin: 10px 0;
}


.course-section .course-form div.narrow .course-price span,
.course-section .course-form div.narrow .course-sale-price span {
    display: block;
    width: 75px;
    float: left;
    line-height: 2em;
}

.course-section .course-form div.narrow .course-enable-gateways span.error,
.course-section .course-form div.narrow .course-sale-price span.error,
.course-section .course-form div.narrow .course-price span.error {
	clear: both;
	width: 100%;
	float:none;
}

.course-section .course-form div.narrow .course-price input[type="text"],
.course-section .course-form div.narrow .course-sale-price input[type="text"] {
    width: 80px;
}


.course-section .course-form .button-edit-gateways,
.course-section .course-form .button-incomplete-gateways {
    padding-left: 24px;
    position: relative;
}

.course-section .course-form .button-incomplete-gateways {
    border-color: #cc712e;
    color: #ffffff;
    box-shadow: 0 1px 0 #fdc575 inset, 0 1px 0 rgba( 0, 0, 0, 0.08 );
    background-color: #f5a00c;
}


.course-section .course-form .button-edit-gateways:before,
.course-section .course-form .button-incomplete-gateways:before {
    font: normal normal 17px/17px dashicons;
    font-weight: normal;
    content: "\f111";
    position: absolute;
    top: 5px;
    left: 4px;
    z-index: 9999;
    color: #ffffff;
}

.course-section .course-form .button-edit-gateways:before {
    color: #444;	
}

.course-section .course-form input.class_size.disabled + a + a,
.course-section .course-form input.class_size.disabled + a {
    display:none;
}

.course-section .course-form input[type="checkbox"] {
    display: inline-block;
}



#invite-message {
    /*    position: absolute;
        bottom: 5px;
        left: 195px;
        z-index: 999;
    */
    display: inline;
    padding-left:5px;
}

#invite-message .fa-check {
    color: #6FC26E;
}

#invite-message .fa-info-circle {
    color: #FC9F26;
}

#invite-message .fa-exclamation {
    color: #f00;
}

::-webkit-input-placeholder { /* WebKit browsers */
    font-size:0.9em;
    color: #909090;
    font-style: oblique;
}
:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
    font-size:0.9em;
    color: #909090;
    font-style: oblique;
    opacity:  1;
}
::-moz-placeholder { /* Mozilla Firefox 19+ */
    font-size:0.9em;
    color: #909090;	
    font-style: oblique;
    opacity:  1;
}
:-ms-input-placeholder { /* Internet Explorer 10+ */
    font-size:0.9em;
    color: #909090;	
    font-style: oblique;
}

.unit_page_title{
    margin-bottom: 15px;
    margin-top: 10px;
}

.coursepress_page_course_details .course-details hr{
    margin-left: -17px;
}


.course-section.step .course-form input.update {
    display: none;
}

.unit_page_title input{
    width: 99%;
    margin-bottom: 20px;
}

.unit_page_title label{
    display: block;
    padding-top: 4px;
    font-size: 13px;
    padding-left: 3px;
}

.unit_page_title .description{
    font-size: 12px;
    padding-left: 3px;
    margin-bottom: 10px;
}

span.no-elements {
    text-align: center;
    font-size: 12px;
    color: #e1dcdc;
    display: block;
    padding: 13px;
    border: 1px solid #ececec;
    width: 97%;
    margin-top: 15px;
    margin-bottom: 13px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px; /* future proofing */
    -khtml-border-radius: 5px; /* for old Konqueror browsers */
}

/* CSS Tree menu styles */
ol.tree
{
    padding: 0 0 0 0px;
    /* width: 300px;*/
}

.tree li 
{ 
    position: relative; 
    margin-left: -15px;
    list-style: none;
}

.tree li.element
{
    margin-left: -1px !important;
}

.tree li.element a
{
    color: #fff;
    padding-left: 21px;
    text-decoration: none;
    display: block;
}

.tree .tree-element-left{
    display: inline-block;
    width: 258px;
    text-overflow:ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

.tree .tree-element-right{
    display: inline-block;
    width: 184px;
}

.tree .tree-page-left{
    display: inline-block;
    width: 284px;
    text-overflow:ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

.tree .tree-page-right{
    display: inline-block;
    width: 184px;
}

.tree .tree-unit-left{
    display: inline-block;
    width: 307px;
    text-overflow:ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

.tree .tree-unit-right{
    display: inline-block;
    width: 184px;
}

.tree .tree-element-right .module_show {
    margin-left: 5px;
}

.tree .tree-element-right .module_preview {
    margin-left: 50px;
}

.tree .tree-page-right .module_show {
    margin-left: 5px;
}

.tree .tree-page-right .module_preview {
    margin-left: 50px;
}

.tree .tree-unit-right .module_show {
    margin-left: 5px;
}

.tree .tree-unit-right .module_preview {
    margin-left: 50px;
}

.tree .tree-page-right span{
    display: inline-block;
    text-align: right;
    float: right;
}

.tree .tree-unit-right span{
    display: inline-block;
    text-align: right;
    float: right;
}

.tree li input
{
    cursor: pointer;
}
/* ... */

